2000-11-24  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* readline.c (scm_readline, scm_add_history, completion_function,
	scm_filename_completion_function):  Replace calls to
	SCM_COERCE_SUBSTR with SCM_STRING_COERCE_0TERMINATION_X.

	(internal_readline, scm_add_history, scm_read_history,
	scm_write_history, scm_filename_completion_function,
	completion_function):  Replace SCM_CHARS with SCM_STRING_CHARS.

2000-11-19  Gary Houston  <ghouston@arglist.com>

	* configure.in: test $ac_cv_lib_readline_readline instead of
	$ac_cv_lib_readline_main.  Thanks to Lars J. Aas.

2000-09-17  Marius Vollmer  <mvo@zagadka.ping.de>

	* configure.in: Check for curses, terminfo and termlib libraries
	in addition to ncurses and termcap.
	Check for `readline' in libreadline, not for `main'.
	Thanks to Albert Chin!
	
2000-07-17  Marius Vollmer  <mvo@zagadka.ping.de>

	* configure.in (rl_pre_input_hook): Don't check for this with
	AC_CHECK_FUNCS, it doesn't work on HP/UX.  Test for it with
	AC_TRY_LINK.

2000-06-19  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* readline.c (sigwinch_enable_restart, scm_init_readline):
	Re-enable restart for SIGWINCH signal.

	* configure.in: Added test if readline clears SA_RESTART flag for
	SIGWINCH.  (Thanks to Dale P. Smith.)
	Check for siginterrupt and rl_pre_input_hook.

2000-06-14  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* readline.c (scm_readline): Added parenthesis around && within
	||.
	Fixed up prototype for `reentry_barrier'.
	Conditionally #include <unistd.h>.  (Needed for `dup'.)

2000-06-13  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* Makefile.am (dist-hook): Added kludge to fix automake generated
	dependencies in the distribution archive Makefile.

2000-06-12  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* readline.scm (apropos-completion-function): Don't define and
	install if the 'regex feature is missing.

2000-06-06  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* readline.c: Always provide scm_init_readline, also if readline